--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="random_quiz">Random Quiz</string>
     <string name="take_quiz">Take Quiz</string>
     <string name="sorry_no_question_found">Sorry, Enter less number of question</string>
+    <string name="sorry_no_internet">OOps, No internet connection </string>
     <string name="submit">Submit</string>
     <string name="correct_answers">Correct Answers:</string>
     <string name="attempted">Attempted:</string>
